# vgtd

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
docs/design/: capturing_tasks.md
src/: commands.rs  dirs.rs  error.rs  file.rs  gtd.rs  indexer.rs  itempath.rs  lib.rs  main.rs  render.rs  text.rs  tos.rs  tui.rs
src/tui/: containers.rs  input.rs
