[package]
name = "voltgtd"
description = "Volatus' GTD utility tool"
authors = ["Volatus"]
version = "0.21.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
crossterm = "0.26"
lazy_static = "1.4"
regex = "1.8"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
