[package]
name = "vgtd"
description = "Volatus' GTD utility tool"
authors = ["Volatus"]
version = "2.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/veritatislux/vgtd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
directories = "5"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
